# bdo-noderouter

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
demo/: index.html  index.js  style.css
examples/: profile.rs
python/noderouter/: api_common.py  api_data_store.py  api_exploration_data.py  api_exploration_graph.py  api_highs_model.py  api_highs_solver.py  api_rx_pydigraph.py  api_solution_handling.py  bench.py  config.toml  data_store.py  exploration_data.py  fuzz.py  fuzz_suboptimal_viewer.py  fuzz_test.py  fuzz_wip.py  fuzzing.py  mip_baseline.py  mip_baseline_rust.py  node_router.py  noderouter.pyi  optimizer_mip.py  optimizer_nr.py  orchestrator.py  orchestrator_pairing_strategy.py  orchestrator_terminal_pairs.py  orchestrator_types.py  pairing_strategy.py  pd_approximation.py  rank_nr.py  rank_nr2.py  test_baselines.py  test_terminal_pairs.py  testing.py  testing_baselines.py  testing_orig.py  testing_root_pairing.py  testing_terminal_pairs.py  tree_decomp.py  validate_cc.py  (+2 more)
python/noderouter/data/: clean_exploration.json  custom_strategy_terminal_pairs.json  exploration.json  strategy_summary.csv  worst_suboptimal_instances.json
python/noderouter/data/workerman/: 120_250608_1201.json  125_250608_1201.json  150_250608_1201.json  160_250608_1201.json  170_250608_1201.json  175_250608_1201.json  180_250608_1201.json  190_250608_1201.json  195_250608_1201.json  200_250608_2034.json  215_250608_2034.json  220_250608_2034.json  225_250608_2034.json  230_250608_2034.json  240_250608_2034.json  245_250608_2034.json  260_250608_2034.json  265_250608_2034.json  275_250608_2034.json  280_250608_2034.json  295_250608_2034.json  30_250608_1201.json  310_250608_2034.json  315_250608_2034.json  340_250609_0729.json  345_250609_0729.json  350_250609_0729.json  355_250609_0729.json  360_250609_0729.json  365_250609_0729.json  380_250609_0729.json  390_250609_0729.json  395_250609_0729.json  400_250609_0729.json  410_250609_0729.json  420_250609_0729.json  425_250609_0729.json  440_250609_0729.json  445_250609_0729.json  450_250609_0729.json  (+14 more)
python/nwsf_rust/: api_exploration_graph.py  api_highs_model.py  api_rx_pydigraph.py  api_solution_handling.py  data_store.py  mip_baseline.py  mip_baseline.toml  neighbor_territories.py  node_router.py  node_router_approximation.py  nwsf_rust.pyi  pd_approximation.py  pd_approximation.toml  test.py  testing.py  testing.toml  visualize_solution.py
python/nwsf_rust/data/: clean_exploration.json
python/nwsf_rust/data/workerman/: 10_250608_1201.json  140_250608_1201.json  165_250608_1201.json  185_250608_1201.json  205_250608_2034.json  210_250608_2034.json  235_250608_2034.json  250_250608_2034.json  255_250608_2034.json  270_250608_2034.json  285_250608_2034.json  290_250608_2034.json  300_250608_2034.json  305_250608_2034.json  320_250608_2034.json  325_250609_0729.json  330_250609_0729.json  335_250609_0729.json  370_250609_0729.json  375_250609_0729.json  385_250609_0729.json  405_250609_0729.json  415_250609_0729.json  430_250609_0729.json  435_250609_0729.json  485_250609_2037.json  490_250609_2037.json  495_250609_2037.json  500_250609_2037.json  50_250608_1201.json  530_250609_2037.json  535_250609_2037.json  545_250609_2037.json
python/tests/: test_all.py
src/: bridge_generator.rs  dstree.rs  exploration_data.rs  fast_paths.rs  generator_bridge.rs  generator_weighted_combo.rs  gssp.rs  gssp_data.rs  helpers_common.rs  idtree.rs  lib.rs  node_router.rs  primal_dual.rs  python_node_router.rs  wasm.rs  wasm_node_router.rs  weighted_combo_generator.rs
