[package]
name = "noderouter"
description = "Primal Dual Approximations for Node Weighted Steiner Forest"
repository = "https://github.com/Thell/bdo-noderouter"
license = "UNLICENSE"
version = "0.2.0"
edition = "2024"

[lib]
name = "noderouter"
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true

[profile.dev]
debug = true

[dependencies]
fixedbitset = "0.5.7"
nohash-hasher = "0.2.0"
petgraph = "0.8.3"
rapidhash = "4.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smallvec = "1.15.1"

pyo3 = { version = "0.27.2", optional = true }
js-sys = { version = "0.3.83", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }
fast_paths = "1.0.0"

[features]
default = []
python = ["pyo3"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "js-sys"]

[target.wasm32-unknown-unknown]
rustflags = ["--cfg=wasm_js"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
