[package]
name = "noderouter"
description = "Primal Dual Approximations for Node Weighted Steiner Forest"
repository = "https://github.com/Thell/bdo-noderouter"
license = "UNLICENSE"
version = "0.3.0"
edition = "2024"

[lib]
name = "noderouter"
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true

[profile.dev]
debug = true

[dependencies]
# fast_paths = "1.0.0"
fast_paths = { git = "https://github.com/Thell/fast_paths" }
fixedbitset = "0.5.7"
idtree = "0.1.0"
nohash-hasher = "0.2.0"
petgraph = "0.8.3"
rapidhash = "4.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smallvec = "1.15.1"

pyo3 = { version = "0.28.2", optional = true }
js-sys = { version = "0.3.91", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { version = "0.2.114", optional = true }
csv = "1.4.0"

[features]
default = []
python = ["pyo3"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "js-sys"]

[target.wasm32-unknown-unknown]
rustflags = ["--cfg=wasm_js"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
