[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "noderouter"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

dependencies = [
    "bidict>=0.23.1",
    "folium>=0.20.0",
    "highspy==1.12.0",
    "joblib>=1.5.2",
    "loguru>=0.7.3",
    "maturin>=1.9.2",
    "polars>=1.36.1",
    "rustworkx>=0.16.0",
]

[tool.maturin]
python-source = "python"
profile = "release"
features = ["pyo3/extension-module", "python"]
bindings = "pyo3"
manifest-path = "Cargo.toml"

[tool.ty.environment]
extra-paths = ["./python/noderouter"]
