[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "noderouter"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

dependencies = [
    "altair>=6.0.0",
    "bidict>=0.23.1",
    "colorcet>=3.1.0",
    "flet[all]>=0.28.3",
    "folium>=0.20.0",
    "highspy==1.12.0",
    "joblib>=1.5.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "maturin>=1.9.2",
    "networkx>=3.6.1",
    "polars>=1.36.1",
    "pyarrow>=23.0.0",
    "pyvis>=0.3.2",
    "rustworkx>=0.16.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "ty>=0.0.20",
]

[tool.maturin]
python-source = "python"
profile = "release"
features = ["pyo3/extension-module", "python"]
bindings = "pyo3"
manifest-path = "Cargo.toml"

[tool.ty.environment]
extra-paths = ["./python/noderouter"]
